--- a/index.html
+++ b/index.html
@@ -368,6 +368,98 @@
                                         </div>
                                     </a>
                                 </div>
+                                <div class="grid__column-2-4">
+                                    <a class="product-item" href="#">
+                                        <div class="product-item__img"
+                                            style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
+                                        </div>
+                                        <h4 class="product-item__name">
+                                            [Nhập ELSSMTM02 giảm 100k] [Độc quyền] Điện Thoại Samsung Galaxy M02
+                                            (2GB/32GB) - Hàng Chính Hãng
+                                        </h4>
+                                        <div class="product-item__price">
+                                            <div class="product-item__price-old">₫2.390.000</div>
+                                            <div class="product-item__price-new">₫2.250.000</div>
+                                        </div>
+                                        <div class="product-item__action">
+                                            <!-- .product-item__heart-liked -->
+                                            <span class="product-item__heart product-item__heart-liked">
+                                                <i class="product-item__heart-icon--normal far fa-heart"></i>
+                                                <i class="product-item__heart-icon--like fas fa-heart"></i>
+                                            </span>
+                                            <div class="product-item__rating">
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <span class="product-item__sold">50 đã bán</span>
+                                        </div>
+                                        <div class="product-item__origin">
+                                            <span class="product-item__brand">
+                                                Whoo
+                                            </span>
+                                            <span class="product-item__orgin-name">
+                                                Korea
+                                            </span>
+                                        </div>
+                                        <div class="product-item__ribbon-favorite">
+                                            <i class="fas fa-check"></i>
+                                            <span>Yêu thích</span>
+                                        </div>
+                                        <div class="product-item__ribbon-sale-off">
+                                            <span class="product-item__sale-off-percent">10%</span>
+                                            <span class="product-item__sale-off-label">GIẢM</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="grid__column-2-4">
+                                    <a class="product-item" href="#">
+                                        <div class="product-item__img"
+                                            style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
+                                        </div>
+                                        <h4 class="product-item__name">
+                                            [Nhập ELSSMTM02 giảm 100k] [Độc quyền] Điện Thoại Samsung Galaxy M02
+                                            (2GB/32GB) - Hàng Chính Hãng
+                                        </h4>
+                                        <div class="product-item__price">
+                                            <div class="product-item__price-old">₫2.390.000</div>
+                                            <div class="product-item__price-new">₫2.250.000</div>
+                                        </div>
+                                        <div class="product-item__action">
+                                            <!-- .product-item__heart-liked -->
+                                            <span class="product-item__heart product-item__heart-liked">
+                                                <i class="product-item__heart-icon--normal far fa-heart"></i>
+                                                <i class="product-item__heart-icon--like fas fa-heart"></i>
+                                            </span>
+                                            <div class="product-item__rating">
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="product-item__rating-icon--gold fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                            <span class="product-item__sold">50 đã bán</span>
+                                        </div>
+                                        <div class="product-item__origin">
+                                            <span class="product-item__brand">
+                                                Whoo
+                                            </span>
+                                            <span class="product-item__orgin-name">
+                                                Korea
+                                            </span>
+                                        </div>
+                                        <div class="product-item__ribbon-favorite">
+                                            <i class="fas fa-check"></i>
+                                            <span>Yêu thích</span>
+                                        </div>
+                                        <div class="product-item__ribbon-sale-off">
+                                            <span class="product-item__sale-off-percent">10%</span>
+                                            <span class="product-item__sale-off-label">GIẢM</span>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
