--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="app">
         <header class="header">
             <div class="grid wide">
-                <nav class="header__navbar">
+                <nav class="header__navbar hide-on-mobile-tablet">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item
                                 header__navbar-item--has-qr
@@ -137,7 +137,7 @@
                 </nav>
 
                 <div class="header-with-search">
-                    <div class="header__logo">
+                    <div class="header__logo hide-on-tablet">
                         <a href="/" class="header__logo-link">
                             <svg viewBox="0 0 192 65" class="header__logo-img">
                                 <g fill-rule="evenodd">
@@ -255,6 +255,21 @@
                     </div>
                 </div>
             </div>
+
+            <ul class="header__sort-bar">
+                <li class="header__sort-item">
+                    <a href="#" class="header__sort-item-link">Liên quan</a>
+                </li>
+                <li class="header__sort-item">
+                    <a href="#" class="header__sort-item-link header__sort-item-link--active">Mới nhất</a>
+                </li>
+                <li class="header__sort-item">
+                    <a href="#" class="header__sort-item-link">Bán chạy</a>
+                </li>
+                <li class="header__sort-item">
+                    <a href="#" class="header__sort-item-link">Giá</a>
+                </li>
+            </ul>
         </header>
 
         <div class="homepage">
@@ -280,7 +295,7 @@
                         </nav>
                     </div>
                     <div class="grid__column-10">
-                        <div class="filter">
+                        <div class="filter hide-on-mobile-tablet">
                             <span class="filter__label">Sắp xếp theo</span>
                             <button class="filter__btn btn">Phổ biến</button>
                             <button class="filter__btn btn btn--primary">Mới nhất</button>
