- update css product on mobile and tablet

--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
 
         <div class="homepage">
             <div class="grid wide">
-                <div class="grid__row">
-                    <div class="grid__column-2">
+                <div class="row sm-gutter">
+                    <div class="col l-2 m-0 c-0">
                         <nav class="category">
                             <h3 class="category__heading">
                                 <i class="fas fa-list category__heading-icon"></i>
@@ -298,7 +298,7 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="grid__column-10">
+                    <div class="col l-10 m-12 c-12">
                         <div class="filter hide-on-mobile-tablet">
                             <span class="filter__label">Sắp xếp theo</span>
                             <button class="filter__btn btn">Phổ biến</button>
@@ -340,10 +340,31 @@
                                 </div>
                             </div>
                         </div>
-
+                        <nav class="mobile-category">
+                            <ul class="mobile-category__list">
+                                <li class="mobile-category__item">
+                                    <a href="#" class="mobile-category__link">Chuột Gaming</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="#" class="mobile-category__link">Chuột Gaming</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="#" class="mobile-category__link">Chuột Gaming 113 13sda asdasd aasdasd á</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="#" class="mobile-category__link">Chuột Gaming</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="#" class="mobile-category__link">Chuột Gaming</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="#" class="mobile-category__link">Chuột Gaming</a>
+                                </li>
+                            </ul>
+                        </nav>
                         <div class="product">
-                            <div class="grid__row">
-                                <div class="grid__column-2-4">
+                            <div class="row sm-gutter">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -389,7 +410,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -435,7 +456,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -481,7 +502,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -527,7 +548,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -573,7 +594,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -619,7 +640,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -665,7 +686,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -711,7 +732,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -757,7 +778,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__column-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="product-item" href="#">
                                         <div class="product-item__img"
                                             style="background-image: url('https://cf.shopee.vn/file/feddb29666fc5198e0a2bff795c63651_tn');">
@@ -860,8 +881,8 @@
 
         <footer class="footer">
             <div class="grid wide">
-                <div class="grid__row">
-                    <div class="grid__column-2-4">
+                <div class="row">
+                    <div class="col l-2-4">
                         <h3 class="footer__heading">
                             Chăm sóc khách hàng
                         </h3>
@@ -883,7 +904,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
+                    <div class="col l-2-4">
                         <h3 class="footer__heading">
                             Giới thiệu
                         </h3>
@@ -905,7 +926,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
+                    <div class="col l-2-4">
                         <h3 class="footer__heading">
                             Danh mục
                         </h3>
@@ -927,7 +948,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
+                    <div class="col l-2-4">
                         <h3 class="footer__heading">
                             Theo dõi
                         </h3>
@@ -952,7 +973,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__column-2-4">
+                    <div class="col l-2-4">
                         <h3 class="footer__heading">
                             Vào cửa hàng trên ứng dụng
                         </h3>
