--- a/index.html
+++ b/index.html
@@ -881,8 +881,8 @@
 
         <footer class="footer">
             <div class="grid wide">
-                <div class="row">
-                    <div class="col l-2-4">
+                <div class="row sm-gutter">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Chăm sóc khách hàng
                         </h3>
@@ -904,7 +904,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Giới thiệu
                         </h3>
@@ -926,7 +926,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Danh mục
                         </h3>
@@ -948,7 +948,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Theo dõi
                         </h3>
@@ -973,7 +973,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4">
+                    <div class="col l-2-4 m-8 c-12">
                         <h3 class="footer__heading">
                             Vào cửa hàng trên ứng dụng
                         </h3>
